# epsa-duelist

./: .flake8  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: tests.yml
Alpha/: alphatest.py  config.py
Beta/: betatest.py  config.py
app/: __init__.py  bot.py  buttons.py  config.py  pyproject.toml  settings.py
tests/: conftest.py
tests/bot/: test_cmd_start.py
tests/bot/tests/bot/: test_cmd_help.py  test_dev_func.py
