[tool.poetry]
name = "epsa-duelist"
version = "0.1.0"
description = ""
authors = ["Ivan <trepitonpavlo@gmail.com>, Simon <spam@esemi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
wemake-python-styleguide = "^0.17.0"

[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
